templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    #external-dns.alpha.kubernetes.io/hostname: marcinlib.click
    kubernetes.io/ingress.class: alb
  name: library
spec:
  rules:
  - http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: library
              port: 
                number: 80
